	* SHOGUN Release version 0.7.4 (libshogun 4.0, libshogunui 2.0)
	* This release contains several cleanups, features and bugfixes:
	* Features:
		- Implements new multiclass svm formulation.
		- 1,2 and general q-norm MKL for classification, regression and
		one-class for wrapper and chunking algorithm for arbitrary (dual) SVM
		solvers.
		- Dynamic Programming code is now accessible from python.
	* Bugfixes:
		- Correct q-norm MKL for Newton.
		- upon make install of elwms don't install files into R/octave/python
		if these interfaces were not configured
		- svm-nu parameter was not set correctly.
		- Fix custom kernel initialization.
		- Correct get_subkernel_weights.
		- Proper Intel core2 compile flags detection
		- Fix number of outputs for KNN.
		- Run tests with proper LD_LIBRARY_PATH set.
		- Fix several memory leaks.
	* Cleanup and API Changes:
		- Rename svm_one_class_nu to svm_nu.
		- Clean up dynamic programming code.
		- remove commands from_position_list and slide_window and move
		functionallity into set/add_features,

2009-05-02 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.3 (libshogun 3.0, libshogunui 1.1)
	* This release contains several bugfixes:
	* Features:
		- Improve libshogun/developer tutorial.
		- Implement convenience function for parallel quicksort.
		- Fasta/fastq file loading for StringFeatures.
	* Bugfixes:
		- get_name function was undefined in Evaluation causing the
		PerformanceMeasures class to be defunct.
		- Workaround bugs in the std template library for math functions.
		- Compiles cleanly under OSX now, thanks to James Kyle.
	* Cleanup and API Changes:
		- Make sure that all destructors are declared virtual.

2009-03-23 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.2 (libshogun 2.0, libshogunui 1.1)
	* This release contains several cleanups and enhancements:
	* Features:
		- Support all data types from python_modular: dense, scipy-sparse